yoshimi 1.5.M

2019-4-8 Will
* Removed /Misc/FileListItem.h
  It was never called, referenced or included.
* A few minor cleanups.

2019-4-6 Will
* Disable GUI Analog Phaser controls when not set.
* Revised Gui Layout to make this more obvious.
* Further adustments - Phase disabled for Analog.
* Re-ordered controls.
* L/R also disabled for Analog.

2019-4-3 Will
* Converted Bank root control to MSB, LSB, OFF.
* Undated docs.

2019-4-1 Will
* Added more informative tooltips.

2019-3-27 Will
* Completed GUi updates for effect controls.
* Implemented master mono/stero switch.
* Resets and state/patch loads clear mono/stero switch.

2019-3-26 Will
* BugFix: MIDI-learn now learn correct effect numbers.
  GUI still not updated correctly yet.

2019-3-23 Will
* Corrected code indentation and missing bracket
  in UI/MiscGui.cpp

2019-3-22 will
* Further adjustments to suppress GCC7 warnings.
  Some global enums changed to const unsigned char.
  CmdInterface/helplist() changed to char.
* Added more warning/error traps to CMakeLists.
* Removed some switch case dropthroughs.
* Final GCC7 warnings suppressed?

2019-3-21 Will
* Bugfix: Insert effect part list out of step.
* Sorted out potential GCC7 build warnings.

2019-3-20 Will
* Dynfilter insert done for local changes.
  No idea how to set for patch loads :(

2019-3-19 Will
* Most effect warnings now correct.
  Still incorrect when loading :(
* All part warnings correct.
* Sys/Ins warnings done too.
  CLI not done though!
* BugFix: Error loading instrument effects.
  Preset and parameter in wrong order.

2019-3-18 Will
* More work on effect warnings.
  Still more to do
  CLI test messages in place

2019-3-17 Will
* Temporarily disalbled Hi Res LFO.
  It will change!

2019-3-16 Will
* Effect change recognises intstrument loads.
* BugFix: CLI distortion not seing preset change.
* Effect change sets now sets colour of field.
  Still some corner cases to correct.

2019-3-15 Will
* LFO conversion done